--- a/package.json
+++ b/package.json
@@ -6,14 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
+    "@firebase/firestore": "^4.6.4",
+    "@firebase/storage": "^0.12.6",
+    "firebase": "^10.12.3",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
+    "eslint": "^9.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
