--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-NEXT_PUBLIC_FIREBASE_API_KEY = "AIzaSyAVRjgnjf_LkjOTQnuOjPNKuBanSSTU0a8"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN = "joki-470d8.firebaseapp.com"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID = "joki-470d8"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET = "joki-470d8.appspot.com"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID = "922927232912"
-NEXT_PUBLIC_FIREBASE_APP_ID = "1:922927232912:web:abfed85784e66daba16515"
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID = "G-XXL83HHJ5N"
+NEXT_PUBLIC_FIREBASE_API_KEY = "AIzaSyDx4d0CxZ-5MSqjIU5bEflJR_JDUtqO6Kk"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN = "labasweb-a19bc.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID = "labasweb-a19bc"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET = "labasweb-a19bc.appspot.com"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID = "912737129035"
+NEXT_PUBLIC_FIREBASE_APP_ID = "1:912737129035:web:ca9310c51d8af0aa53f3ce"
 
